--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Jimmie Munyi
-description: Technical Blog by Jimmie Munyi
+description: Technical Blog.
 github_username: jimmiemunyi
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
